<resources>
    <string name="app_name">攻略助手for星露谷物语</string>
    <string name="home_page">首页</string>
    <string name="home_people">人物介绍</string>
    <string name="home_tools">工具武器</string>
    <string name="home_farm">农场牧场</string>
    <string name="home_offer">献祭任务</string>
    <string name="home_valley">山谷环境</string>
    <string name="home_news">最新资讯</string>
    <string name="spring">春季</string>
    <string name="summer">夏季</string>
    <string name="autumn">秋季</string>
    <string name="winter">冬季</string>
    <string name="fail">刷新失败,请检查网络是否正常</string>
    <string name="no_news">没有新的内容</string>
    <string name="news_content">内容详情</string>
    <string name="news_house">我的收藏</string>
    <string name="no_news_house">暂无收藏</string>
    <string name="house_ok">已收藏</string>
    <string name="house_cancel">取消收藏</string>
    <string name="total">所有</string>
    <string name="marriage">婚姻</string>
    <string name="marriage_ok">可结婚</string>
    <string name="marriage_no">不可结婚</string>
    <string name="sex">性别</string>
    <string name="man">男性</string>
    <string name="women">女性</string>
    <string name="name">姓名</string>
    <string name="profile">人物简介</string>
    <string name="people_details">详细信息</string>
    <string name="like_0">最爱</string>
    <string name="like_1">喜欢</string>
    <string name="like_2">普通</string>
    <string name="like_3">不喜欢</string>
    <string name="like_4">讨厌</string>
    <string name="love_things_0">2心事件</string>
    <string name="love_things_1">4心事件</string>
    <string name="love_things_2">6心事件</string>
    <string name="love_things_3">8心事件</string>
    <string name="love_things_4">10心事件</string>
    <string name="distance_of_run">行程</string>
    <string name="favorite_items">喜爱物品</string>
    <string name="love_things">红心事件</string>
    <string name="marry_end">婚后</string>
    <string name="condition">触发条件</string>
    <string name="process">事件过程</string>
    <string name="things_result">结果</string>
    <string name="information">个人信息</string>
    <string name="birthday">生日</string>
    <string name="local">位置</string>
    <string name="relatives">亲属</string>
    <string name="friend">朋友</string>
    <string name="like">喜好</string>
    <string name="local_name">地点名称</string>
    <string name="people_name">居住人员</string>
    <string name="describe">地点描述</string>
    <string name="open_time">开放时间</string>
    <string name="image_title">建筑图片</string>
    <string name="tools_div">可使用工具类</string>
    <string name="mineral_div">矿石文物类</string>
    <string name="decorate_div">装饰护甲类</string>
    <string name="cooking_div">烹饪食品类</string>
    <string name="furniture_div">家具类</string>
    <string name="manufacture_div">制造类</string>
    <string name="home_back_toast">再按一次返回桌面</string>
    <string name="tools_name">名称</string>
    <string name="image">图片</string>
    <string name="spend">花费</string>
    <string name="raw_material">原料</string>
    <string name="promote">提升</string>
    <string name="lenvel">等级</string>
    <string name="tools_local">来源</string>
    <string name="damage">伤害</string>
    <string name="addition">增益</string>
    <string name="use">用途</string>
    <string name="tools_describe">描述</string>
    <string name="cultural_relic_use">送礼，博物馆捐献</string>
    <string name="rely">回复</string>price
    <string name="price">价格</string>
    <string name="calendar">日历</string>
    <string name="calendar_day">日期</string>
    <string name="day">日</string>
    <string name="festival">节日</string>
    <string name="add">添加</string>
    <string name="gone">隐藏</string>
    <string name="crops">作物</string>
    <string name="fish">鱼类</string>
    <string name="things">事件</string>
    <string name="things_details">事件详情</string>
    <string name="ok">确认</string>
    <string name="delete">删除</string>
    <string name="intput">请输入</string>
    <string name="season_tishi">未选定日期</string>
    <string name="season_pick">采摘</string>
    <string name="harvest">一次收获作物</string>
    <string name="harvests">多次收获作物</string>
    <string name="seed_price">种子价格</string>
    <string name="grow_up_day">成长天数</string>
    <string name="fram_times">单季最多收获次数</string>
    <string name="fram_price">售价</string>
    <string name="grow_up_days">再次收获天数</string>
    <string name="loading">加载中...</string>
    <string name="fish_time">钓鱼时间</string>
    <string name="weather">天气</string>
    <string name="season">季节</string>
    <string name="winter_fram">无冬季作物</string>
    <string name="reward">奖励</string>
    <string name="details">详情</string>
    <string name="tree_child">树苗</string>
    <string name="leave_1">阶段1</string>
    <string name="leave_2">阶段2</string>
    <string name="leave_3">阶段3</string>
    <string name="leave_4">阶段4</string>
    <string name="leave_5">春/夏/秋/冬</string>
    <string name="harvest_title">收获</string>
    <string name="time">时间</string>
    <string name="work_tools">工匠物品</string>
    <string name="other">其他</string>
    <string name="cave_1">蝙蝠洞</string>
    <string name="cave_2">蘑菇洞</string>
    <string name="animal_1">畜栏动物</string>
    <string name="animal_2">畜棚动物</string>
    <string name="production">生产</string>
</resources>
