<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_people_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ffbe4e"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_people_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="亚力克斯"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_people_name_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Alex"
                android:textColor="#000"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_people_title_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_people_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp" />

        <LinearLayout
            android:id="@+id/ll_people_information"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/iv_people_title_icon"
            android:background="#ffbe4e"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_people_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:textColor="#000"
                android:textSize="20sp" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ll_people_information">

            <LinearLayout
                android:id="@+id/ll__prople_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_people_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_people_information"
                    android:layout_marginLeft="15dp"
                    android:text="@string/birthday"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/ll_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/ll__prople_1"
                android:background="#ffbe4e" />

            <LinearLayout
                android:id="@+id/ll__prople_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll__prople_1"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_people_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_people_information"
                    android:layout_marginLeft="15dp"
                    android:text="@string/local"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/ll_local"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/ll__prople_2"
                android:background="#ffbe4e" />

            <LinearLayout
                android:id="@+id/ll__prople_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll__prople_2"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_people_relatives"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_people_information"
                    android:layout_marginLeft="15dp"
                    android:text="@string/relatives"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/ll_relatives"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/ll__prople_3"
                android:background="#ffbe4e" />

            <LinearLayout
                android:id="@+id/ll__prople_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll__prople_3"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_people_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_people_information"
                    android:layout_marginLeft="15dp"
                    android:text="@string/friend"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/ll_friend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/ll__prople_4"
                android:background="#ffbe4e" />

            <LinearLayout
                android:id="@+id/ll__prople_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll__prople_4"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_people_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_people_information"
                    android:layout_marginLeft="15dp"
                    android:text="@string/like"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/ll_like"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>
</ScrollView>